# server/src/config/api-docs/swagger.schemas.yaml
@@ -48,29 +48,20 @@ components:
     Budget:
       type: object
       properties:
-        budget_name:
-          type: string
-          description: 예산 이름
-          example: 10월 예산
-        budget_month:
+        month:
           type: string
           description: 예산 월
           example: "2023-10"
-        budget_total:
-          type: Number
-          description: 총 예산 금액
-          example: 10000000
-
-        budget_categories:
+        categories:
           type: array
           items:
             type: object
             properties:
-              category_id:
+              categoryId:
                 type: string
                 description: 카테고리 ID
                 example: 5a76gfq23raf6glkaef
-              budget_amount:
+              amount:
                 type: number
                 description: 카테고리별 예산 금액
                 example: 2000000
@@ -86,13 +77,17 @@ components:
           type: string
           description: 카테고리 종류 (income / expense)
           example: expense
+        parentCategory:
+          type: string
+          description: (소분류의 경우만 사용) 대분류 카테고리 ID
+          example: 68b69069c839252636dbd6a5
 
     Transaction:
       type: object
       properties:
         categoryId:
           type: string
-          description: 카테고리 ID
+          description: 카테고리 ID (소분류)
           example: 5a76gfq23raf6glkaef
         description:
           type: string
@@ -106,12 +101,12 @@ components:
           type: string
           description: 거래 종류 (income / expense)
           example: expense
-        datetime:
+        transactionDate:
           type: string # 타입은 string
           format: date # 💡 format: date로 날짜 형식 지정
           description: 거래 날짜 (YYYY-MM-DD)
-          example: "2025-05-23T05:43:45.000Z"
+          example: "2025-09-10"
         method:
           type: string
-          description: 거래 방법
+          description: 거래 방법 [cash / card / transfer / others]
           example: cash
