# server/src/models/Category.js
@@ -1,11 +1,6 @@
 const mongoose = require("mongoose");
 
 const categorySchema = new mongoose.Schema({
-  userId: {
-    type: mongoose.Schema.Types.ObjectId,
-    ref: "Users",
-  },
-
   name: {
     type: String,
     required: true,
@@ -34,6 +29,13 @@ const categorySchema = new mongoose.Schema({
     default: Date.now,
     required: true,
   },
+
+  parentCategory: {
+    type: mongoose.Schema.Types.ObjectId,
+    ref: "Categories",
+    default: null,
+    required: false,
+  },
 });
 
 const CategoryModel = mongoose.model(
@@ -41,5 +43,7 @@ const CategoryModel = mongoose.model(
   categorySchema,
   "Categories"
 );
+
+
 
 module.exports = CategoryModel;
